--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,5 +6,6 @@ google-generativeai==0.8.3
 supabase==2.10.0
 python-jose==3.3.0
 python-multipart==0.0.6
-youtube-transcript-api==0.6.3
+youtube-transcript-api==0.6.2
 pyjwt==2.10.1
+Pillow
